--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,7 +1,7 @@
 * { box-sizing:border-box; }
 
 body {
-	font-family: Helvetica;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	background: #eee;
   -webkit-font-smoothing: antialiased;
 }
